Fix side panel overflowing the tab contents

--- a/src/panel/_side-panel.scss
+++ b/src/panel/_side-panel.scss
@@ -1,4 +1,7 @@
 .side-panel {
   background-color: white;
   position: absolute;
+  height: 100%;
+  max-height: 100%;
+  overflow: auto;
 }
